<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bt_recipe"
        style="@style/MainButton"
        android:text="@string/bt_recipe" />

    <Button
        android:id="@+id/bt_share_intent_sender"
        style="@style/MainButton"
        android:text="@string/bt_share_intent_sender" />

    <Button
        android:id="@+id/bt_start_backup_service"
        style="@style/MainButton"
        android:text="@string/bt_start_backup_service" />
    
    <Button
        android:id="@+id/bt_cooking_chat"
        style="@style/MainButton"
        android:text="@string/bt_cooking_chat" />
    
    <Button
        android:id="@+id/bt_button_in_front"
        style="@style/MainButton"
        android:text="@string/bt_button_in_front" />
    
    <Button
        android:id="@+id/bt_button_on_bottom"
        style="@style/MainButton"
        android:text="@string/bt_button_on_bottom" />

    <Button
        android:id="@+id/bt_recipe_frag"
        style="@style/MainButton"
        android:text="@string/bt_recipe_frag" />
    
    <Button
        android:id="@+id/bt_location"
        style="@style/MainButton"
        android:text="@string/bt_location" />
    
</LinearLayout>
